changed timing of save function to make sure data is actually saved when on mobile

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -523,7 +523,7 @@ main {
 }
 
 .card {
-  color          : &$onSurfaceHighEmphasis;
+  color          : $onSurfaceHighEmphasis;
   display        : flex;
   flex-direction : row;
   justify-content: flex-end;
